# multi

./: AUTHORS  CMakeLists.txt  LICENSE  README  TODO
cmake/: Doxyfile.in  cmake_clear.cmake.in
src/deamon/: arg.c  arg.h  config.c  config.h  file.c  file.h  main.c  server.c  server.h  usage.c  usage.h
src/master/: arg.c  arg.h  client.c  client.h  config.c  config.h  file.c  file.h  main.c  usage.c  usage.h
src/share/: arg.c  arg.h  compile.c  compile.h  config.c  config.h  error.h  language.c  language.h  socket.c  socket.h  utils.c  utils.h
